[project]
name = "hot-days"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.6",
    "openmeteo-requests>=1.5.0",
    "pandas>=2.2.3",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
    "streamlit>=1.45.1",
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
]
